--- a/styles/style.css
+++ b/styles/style.css
@@ -257,11 +257,15 @@ body{
 }
 /* Media Query Started */
 @media only screen and (max-width:688px){
+    html, body{
+        overflow-x: hidden;
+    }
     .navbar-design{
         
         flex-direction: column;
         width: 100%;
         height: 695px;
+       
     }
     hr{
         display: none;
